force-app/main/default/objects/Odoo_Site__mdt/Odoo_Site__mdt.object-meta.xml
<CustomObject>
    <description>Maps Odoo site codes to Odoo integer IDs (company, country, metro, site). Used by IP-1 to populate sale.order header fields. All integer ID fields are TBC - confirm from Odoo staging before UAT.</description>
    <label>Operating Site</label>
    <pluralLabel>Operating Sites</pluralLabel>
</CustomObject>