force-app/main/default/objects/Odoo_Site__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country (ISO 2-char)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>