force-app/main/default/objects/Odoo_Site__mdt/fields/Odoo_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Company_ID__c</fullName>
    <label>Odoo Company ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>