force-app/main/default/objects/Odoo_Site__mdt/fields/Odoo_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Site_Code__c</fullName>
    <label>Odoo Site Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>